--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==1.1.1
-Flask-Bootstrap==3.3.7.1
-Flask-Testing==0.7.1
-Flask-WTF==0.14.2
+Bootstrap-Flask==2.0.0
+Flask==2.0.2
+Flask-Testing==0.8.1
+Flask-WTF==1.0.0
+redis==4.1.1
+rq==1.10.1
