--- a/project/dashboard/Dockerfile
+++ b/project/dashboard/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.9.1-alpine
 
-RUN pip install rq-dashboard
+RUN pip install rq-dashboard==0.6.1
+RUN pip install click==7.1.2
 
 EXPOSE 9181
 
