--- a/project/dashboard/Dockerfile
+++ b/project/dashboard/Dockerfile
@@ -1,6 +1,9 @@
-FROM python:3.9.1-alpine
+FROM python:3.10-alpine
 
-RUN pip install rq-dashboard==0.6.1
+RUN pip install rq-dashboard
+
+# https://github.com/rq/rq/issues/1469
+RUN pip uninstall -y click
 RUN pip install click==7.1.2
 
 EXPOSE 9181
