--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
+Bootstrap-Flask==2.0.0
+Flask==2.0.2
 Flask-Testing==0.8.1
-Flask-WTF==0.14.3
-redis==3.5.3
-rq==1.7.0
+Flask-WTF==1.0.0
+redis==4.1.1
+rq==1.10.1
+pydantic==1.8.2
+pandas
